@@ -1,0 +1,4 @@
+EXPECTED_EXIT=0
+cdecl -xc++ <<END
+declare f as function returning pointer to member of class C pointer to int
+END
