@@ -1,0 +1,4 @@
+EXPECTED_EXIT=0
+cdecl -xc++ <<END
+declare p as pointer to member of class C function returning pointer to int
+END
